Point density textures: vertex colors are not properly averaged #49609

Closed
opened 2016-10-08 14:35:59 +02:00 by Daisuke Takahashi · 6 comments

System Information
Mac OSX 10.10.5, Intel HD Graphics 5000

Blender Version
Broken: (2.78, Hash: 0b13b7a (official release), 0a2a006 (Branch: master))

Short description of error
In pointdensity_cache_vertex_color(), data_color is always substituted by mcol- [x].r, then divided by the number of MLoops. As a result, resultant color becomes darker with larger number of Mloops.
test-pdt.jpg

The diff will depict the issue more clearly.
P411: pdt-vertex-color-average.diff

diff --git a/source/blender/render/intern/source/pointdensity.c b/source/blender/render/intern/source/pointdensity.c
index e4da430..4bb2463 100644
--- a/source/blender/render/intern/source/pointdensity.c
+++ b/source/blender/render/intern/source/pointdensity.c
@@ -333,7 +333,13 @@ static void pointdensity_cache_vertex_color(PointDensity *pd, Object *UNUSED(ob)
 	
 	for (i = 0; i < totloop; i++) {
 		int v = mloop- [x].v;
-		rgb_uchar_to_float(&data_color[v*3], &mcol- [x].r);
+		if (mcorners- [x] == 0) {
+			rgb_uchar_to_float(&data_color[v*3], &mcol- [x].r);
+		} else {
+			float co[3];
+			rgb_uchar_to_float(co, &mcol- [x].r);
+			add_v3_v3(&data_color[v*3], co);
+		}
 		++mcorners[v];
 	}
 	

Thank you very much.
test-pdt.blend

**System Information** Mac OSX 10.10.5, Intel HD Graphics 5000 **Blender Version** Broken: (2.78, Hash: 0b13b7a (official release), 0a2a006 (Branch: master)) **Short description of error** In pointdensity_cache_vertex_color(), data_color is always substituted by mcol- [x].r, then divided by the number of MLoops. As a result, resultant color becomes darker with larger number of Mloops. ![test-pdt.jpg](https://archive.blender.org/developer/F375513/test-pdt.jpg) The diff will depict the issue more clearly. [P411: pdt-vertex-color-average.diff](https://archive.blender.org/developer/P411.txt) ``` diff --git a/source/blender/render/intern/source/pointdensity.c b/source/blender/render/intern/source/pointdensity.c index e4da430..4bb2463 100644 --- a/source/blender/render/intern/source/pointdensity.c +++ b/source/blender/render/intern/source/pointdensity.c @@ -333,7 +333,13 @@ static void pointdensity_cache_vertex_color(PointDensity *pd, Object *UNUSED(ob) for (i = 0; i < totloop; i++) { int v = mloop- [x].v; - rgb_uchar_to_float(&data_color[v*3], &mcol- [x].r); + if (mcorners- [x] == 0) { + rgb_uchar_to_float(&data_color[v*3], &mcol- [x].r); + } else { + float co[3]; + rgb_uchar_to_float(co, &mcol- [x].r); + add_v3_v3(&data_color[v*3], co); + } ++mcorners[v]; } ``` Thank you very much. [test-pdt.blend](https://archive.blender.org/developer/F375515/test-pdt.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Daisuke-Takahashi

Added subscriber: @Daisuke-Takahashi

This issue was referenced by 1fad269d07

This issue was referenced by 1fad269d07d49619303bd61fcd3166376e8f66b4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-10-09 13:18:12 +02:00

Thanks for the patch! :)

Thanks for the patch! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49609
No description provided.